--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <style>
     body { font-family: Arial, sans-serif; text-align: center; margin-top: 40px; }
     video, canvas { border: 1px solid #ccc; margin: 10px; }
-    button { margin: 10px; padding: 10px 20px; font-size: 16px; }
+    button { margin: 10px; padding: 10px 20px; font-size: 16px; cursor: pointer; }
   </style>
 </head>
 <body>
@@ -14,7 +14,7 @@
   <video id="video" width="320" height="240" autoplay></video><br>
   <button id="snap">Capture</button>
   <canvas id="canvas" width="320" height="240"></canvas><br>
-  <button id="upload">Send Selfie</button>
+  <button id="download">Download Selfie</button>
 
   <script>
     // Access front camera
@@ -33,27 +33,14 @@
       context.drawImage(document.getElementById("video"), 0, 0, 320, 240);
     });
 
-    // Upload image
-    document.getElementById("upload").addEventListener("click", () => {
+    // Download image to PC
+    document.getElementById("download").addEventListener("click", () => {
       const canvas = document.getElementById("canvas");
-      const dataURL = canvas.toDataURL("image/png");
-
-      // Replace with your server endpoint
-      fetch("https://your-server.com/upload", {
-        method: "POST",
-        body: JSON.stringify({ image: dataURL }),
-        headers: { "Content-Type": "application/json" }
-      })
-      .then(res => {
-        if (res.ok) {
-          alert("✅ Selfie sent successfully!");
-        } else {
-          alert("❌ Upload failed.");
-        }
-      })
-      .catch(err => {
-        alert("Error sending selfie: " + err);
-      });
+      const link = document.createElement("a");
+      const timestamp = new Date().toISOString().replace(/[:.]/g, "-");
+      link.download = `selfie-${timestamp}.png`; // unique filename
+      link.href = canvas.toDataURL("image/png");
+      link.click();
     });
   </script>
 </body>
